# one_billion_rows

./: .gitignore  Cargo.toml  Readme.md
data/: measurements.txt
findlib/: Cargo.toml
findlib/src/: lib.rs
generate/: Cargo.toml
generate/src/: main.rs
sol1/: Cargo.toml
sol1/benches/: bench.rs
sol1/src/: lib.rs
sol2/: Cargo.toml
sol2/benches/: bench.rs
sol2/src/: lib.rs
src/: main.rs
