[package]
name = "onebrc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
pprof = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
sol1 = { path = "sol1" }


[workspace]
members = ["generate", "sol1", "findlib"]
